# omni-account-zkp

./: .gitignore  README.md
fixtures/: fixture.json  fixture1.json  fixture2.json  fixture_arbi.json  fixture_sepolia.json
lib/: Cargo.toml
lib/src/: conversions.rs  lib.rs  smt.rs  types.rs  types_intermediate.rs  user_operation.rs
lib/src/zero_smt/: key.rs  mod.rs  smt.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
