[package]
name = "omni-account-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types =  "0.7.7"
alloy = "0.2.1"
# alloy = {version = "0.2.1", default-features = false, features = ["serde"]}
alloy-primitives = { version = "0.7.7", features = ["serde"] }
# hex = "0.4.3"
# primitive_types = { version = "0.12.2", features = ["serde"] }
sha3 = { version = "0.10.8", default-features = false }
serde = { version = "1", features = ["derive"] }
k256 = { version = "0.13", features = ["serde"] } 
# sparse-merkle-tree = "0.6.1"
# blake2b-rs="0.2"
sha2 = { version = "0.10.8", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }