[workspace]
[package]
version = "0.1.0"
name = "omni-account-zkp-program"
edition = "2021"

[dependencies]
# sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-zkvm = "1.1.0"
omni-account-lib = { path = "../lib" }
k256 = { version = "0.13", features = ["serde"] } 
alloy = "0.2.1"
alloy-primitives = { version = "0.7.7", features = ["serde"] }
# hex = "0.4.3"
alloy-sol-types =  "0.7.7"


[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }

